--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,159 @@
-.main-bg{
+body,
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  color: white;
+  overflow: auto;
+}
 
+#bg-img {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: -1;
+  background-image: url("./assets/img/bg-img.jpg");
+}
+
+.top-card {
+  border-radius: 10px;
+  width: 550px;
+  padding: 10px;
+  margin: 8px;
+  background: transparent;
+  border: 2px solid white;
+  color: white;
+  border-radius: 15px;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(15px);
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
 }
 
 .main-card {
-
+  border-radius: 10px;
+  width: 550px;
+  padding: 10px;
+  margin: 8px;
+  background: transparent;
+  border: 2px solid white;
+  color: white;
+  border-radius: 15px;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(15px);
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
 }
 
-.list-icon{
-
+.inner-card {
+  border-radius: 15px;
+  width: 500px;
+  padding: 15px;
+  margin: 15px;
+  background-color: #9700925e;
 }
 
-.list-item{
-
+.truncate {
+  width: 460px;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: auto;
+  padding: auto;
+  cursor: pointer;
 }
 
-.list-item:hover{
-
+.btn-add {
+  color: #a727a2;
+  background-color: white;
+  border: 2px solid white;
+  width: 20px;
+  height: auto;
+  border-radius: 20px;
+  cursor: pointer;
 }
 
-.completed-task {
-
+.btn-add:hover {
+  background-color: #9700925e;
+  color: white;
+  border: 2px solid white;
 }
 
-.uncompleted-task {
+.dropdown-list {
+  z-index: 2;
+  margin-bottom: 80px;
+  background: transparent;
+  border: #a727a2;
+}
 
+.modal-bg {
+  color: white;
+  background: #970092b3;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(15px);
+  overflow-wrap: break-word;
+}
+
+.list-icon {
+  color: white;
+  cursor: pointer;
+}
+
+.list-icon:hover {
+  color: #ffaffcb0;
+  cursor: pointer;
+}
+
+.btn-save {
+  color: white;
+  border-radius: 10px;
+  background-color: #a727a2;
+  border: 2px solid white;
+  cursor: pointer;
+  width: 90px;
+  height: 40px;
+}
+
+.btn-save:hover {
+  color: #a727a2;
+  background-color: white;
+}
+
+.btn-cancel {
+  color: white;
+  border-radius: 10px;
+  background-color: rgb(255, 65, 65);
+  border: 2px solid white;
+  cursor: pointer;
+  width: 90px;
+  height: 40px;
+}
+
+.btn-cancel:hover {
+  color: rgb(223, 12, 12);
+  background-color: white;
+}
+
+@media (max-width: 700px) {
+  .top-card {
+    width: 350px;
+  }
+
+  .main-card {
+    width: 350px;
+  }
+
+  .inner-card {
+    width: 300px;
+  }
+
+  .truncate {
+    width: 260px;
+  }
 }
